fix Layout bug

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -298,7 +298,7 @@ th {
     position: absolute;
     font-size: 32px;
     color: #1E5D88;
-    text-shadow: -1px 0 #0e0e0e, 0 1px #0e0e0e, 1px 0 #0e0e0e, 0 -1px #0e0e0e;
+    /* text-shadow: -1px 0 #0e0e0e, 0 1px #0e0e0e, 1px 0 #0e0e0e, 0 -1px #0e0e0e; */
     text-align: center;
     top: 50%;
     width: 100%;
@@ -316,5 +316,4 @@ th {
     visibility: visible;
     position: fixed;
     opacity: 1;
-
 }
